--- a/app/src/main/res/layout/item_rover_manifest_sol_layout.xml
+++ b/app/src/main/res/layout/item_rover_manifest_sol_layout.xml
@@ -2,13 +2,15 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
