Camera filter in settings Removed theme change

--- a/app/src/main/res/layout/config_fragment_layout.xml
+++ b/app/src/main/res/layout/config_fragment_layout.xml
@@ -10,25 +10,12 @@
         android:id="@+id/tv_rover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:text="@string/rover_name_curiosity"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_search"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btn_search" />
-
-    <Button
-        android:id="@+id/btn_search"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/search"
-        app:icon="@drawable/ic_search_black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="21dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_images"
@@ -41,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_search"
+        app:layout_constraintTop_toBottomOf="@+id/tv_rover"
         app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/item_rover_image_layout" />
 
