--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,7 +12,8 @@
             app:argType="string" />
         <action
             android:id="@+id/action_configFragment_to_manifestFragment"
-            app:destination="@id/manifestFragment" />
+            app:destination="@id/manifestFragment"
+            app:popUpTo="@id/manifestFragment" />
     </fragment>
     <fragment
         android:id="@+id/manifestFragment"
