color scheme added default dark mode dividers commented recycler view items updates

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#FE4040</color>
     <color name="colorPrimaryDark">#C3001B</color>
     <color name="colorAccent">#FF786E</color>
+    <color name="rover_background">#22FF0000</color>
 </resources>
