--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/manifestFragment"
-        android:name="com.shwetank.nasamarsphotos.ui.fragments.manifest.ManifestFragment"
+        android:name="com.shwetank.nasamarsphotos.ui.fragments.manifest.RoverFragment"
         android:label="ManifestFragment">
         <action
             android:id="@+id/action_manifestFragment_to_configFragment"
